{{$NEXT}}

0.004     2025-12-05 15:00:41+01:00 Europe/Amsterdam

    * Added functional interface which is much faster.
    * Added helper functions.
    * Rewritten documentation.
    * Added tests.

0.003     2025-12-04 22:54:17+01:00 Europe/Amsterdam

    * We now have fetch_by_int_from() and fetch_by_string_from()
        * They receive table name and column name, figure out the ID themselves
    * We only call connect() once instead of continuously, so it's faster
    * Added tests and updated docs

0.002     2025-11-29 10:27:54+01:00 Europe/Amsterdam

    * Better function names.

0.001     2025-11-27 17:33:36+01:00 Europe/Amsterdam

    * "It starts..." -- Timon.