@@ -2,11 +2,11 @@ name    = Melian
 author  = Sawyer X
 author  = Gonzalo Diethelm
 license = MIT
-copyright_holder = Sawyer X
+copyright_holder = Sawyer X, Gonzalo Diethelm
 copyright_year   = 2025
 main_module      = lib/Melian.pm
 
-version = 0.004
+version = 0.005
 
 [NextRelease]
 filename = Changes
