@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+    * Improve docs a bit.
+    * Add Gonzalo Diethelm as copyright holder.
+
 0.004     2025-12-05 15:00:41+01:00 Europe/Amsterdam
 
     * Added functional interface which is much faster.
